Redefined routes for swagger and index
